--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,3 +30,11 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+div.fullscreen{
+  display: grid;
+}
+
+div.fullscreen-enabled > div{
+  display: grid;
+}
